# indi_cam90_ccd

./: 99-cam90.rules  AUTHORS  CMakeLists.txt  Cam90.pas  Install.sh  README.md  cam86_ccd.cpp  cam90_ccd.cpp  cam90_ccd.h  indi_cam90_ccd.xml.cmake  libcam86.c  libcam90.c  libcam90.h
